fix: fix lineheight on the coverslider ls gutenberg block

--- a/web/app/themes/juniper-theme/src/scss/_project.scss
+++ b/web/app/themes/juniper-theme/src/scss/_project.scss
@@ -1424,6 +1424,11 @@ input.gform_button.button {
     background-color: #000 !important;
 }
 
+
+h2.ls-cover-slider__main_heading {
+    line-height: 1.2em;
+}
+
 @media screen and (max-width: 1024px){
     h2.wp-block-ls-heading__headline,
     h2.ls-cover-slider__main_heading {
